updated style sheet on Focus page within handlebars so it renders same as Explore;  updated the Focus button listener to use Handlebars href to Focus page, rather than html reference; added header descriptive text to the three columns on Explore page and fixed alignment;  updated css to do that

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,6 +25,15 @@ h1{
 h3{
     font-weight: lighter;
 }
+h5{
+    text-align:left;
+}
+
+h6{
+    font-size: 1.25rem;
+    text-align:left
+}
+
 .forecast{
     
     font-size: 0.9em;
